Made changes to code

--- a/HeroesOfPymoli/02-Homework_04-Pandas_Instructions_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/02-Homework_04-Pandas_Instructions_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -160,7 +160,7 @@
        "576"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -215,14 +215,14 @@
        "0                      576"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unique_players_df = pd.DataFrame({\"Total Number of Players\": None}, index=[0])\n",
-    "unique_players_df[\"Total Number of Players\"] = unique_players\n",
+    "unique_players_df = pd.DataFrame({\"Total Number of Players\": unique_players}, index=[0])\n",
+    "#unique_players_df[\"Total Number of Players\"] = unique_players\n",
     "unique_players_df"
    ]
   },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,12 +259,12 @@
     "average_price = HeroesOfPymoli_data[\"Price\"].mean()\n",
     "number_purchase = HeroesOfPymoli_data[\"Purchase ID\"].count()\n",
     "total_revenue = HeroesOfPymoli_data[\"Price\"].sum()\n",
-    "index = [0]"
+    "#index = [0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -311,18 +311,18 @@
        "0                     179       3.050987                  780        2379.77"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "purchasing_analysis = pd.DataFrame({\"Number of Unique Items\": None, \"Average Price\": None, \n",
-    "                                    \"Number of Purchases\": None, \"Total Revenue\": None}, index=index)\n",
-    "purchasing_analysis[\"Number of Unique Items\"] = unique_items\n",
-    "purchasing_analysis[\"Average Price\"] = average_price\n",
-    "purchasing_analysis[\"Number of Purchases\"] = number_purchase\n",
-    "purchasing_analysis[\"Total Revenue\"] = total_revenue\n",
+    "purchasing_analysis = pd.DataFrame({\"Number of Unique Items\": unique_items, \"Average Price\": average_price, \n",
+    "                                    \"Number of Purchases\": number_purchase, \"Total Revenue\": total_revenue}, index=[0])\n",
+    "#purchasing_analysis[\"Number of Unique Items\"] = unique_items\n",
+    "#purchasing_analysis[\"Average Price\"] = average_price\n",
+    "#purchasing_analysis[\"Number of Purchases\"] = number_purchase\n",
+    "#purchasing_analysis[\"Total Revenue\"] = total_revenue\n",
     "purchasing_analysis"
    ]
   },
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
        "Other / Non-Disclosed           11               0.019097"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,9 +579,8 @@
     "#gender\n",
     "#gender_demographics = pd.DataFrame({\"Total Count\": gender})\n",
     "\n",
-    "gender_demographics = HeroesOfPymoli_data.loc[:,[\"SN\", \"Gender\"]]\n",
-    "gender_demographics\n",
-    "unique_values = gender_demographics.drop_duplicates()\n",
+    "players_gender = HeroesOfPymoli_data.loc[:,[\"SN\", \"Gender\"]]\n",
+    "unique_values = players_gender.drop_duplicates()\n",
     "#unique_values\n",
     "gender = unique_values[\"Gender\"].value_counts()\n",
     "total_players = unique_values[\"Gender\"].count()\n",
@@ -684,26 +683,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'value_counts'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-72-94be17513fff>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mpurchase_count\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mHeroesOfPymoli_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Gender\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m#purchase_count\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0maverage_purchase\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mHeroesOfPymoli_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"Gender\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Price\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0maverage_purchase\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\pythondata\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5272\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5273\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5274\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5275\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5276\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'value_counts'"
-     ]
+     "data": {
+      "text/plain": [
+       "Price    3.050987\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "purchase_count = HeroesOfPymoli_data[\"Gender\"].value_counts()\n",
+    "#gender_purchase = HeroesOfPymoli_data[\"Gender\"].value_counts()\n",
     "#purchase_count\n",
-    "average_purchase = HeroesOfPymoli_data.loc[:, [\"Gender\", \"Price\"]]\n",
+    "#average_purchase = HeroesOfPymoli_data.loc[:, [\"Gender\", \"Price\"]]\n",
+    "#average_purchase\n",
+    "#select gender, \n",
+    "average_purchase = HeroesOfPymoli_data[[\"Gender\", \"Price\"]].mean()\n",
     "average_purchase"
    ]
   },
