Made changes to code

--- a/HeroesOfPymoli/02-Homework_04-Pandas_Instructions_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/02-Homework_04-Pandas_Instructions_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,6 +123,7 @@
     "# Dependencies and Setup\n",
     "import pandas as pd\n",
     "import os as csv\n",
+    "import numpy as np\n",
     "# File to Load (Remember to Change These)\n",
     "file_to_load = \"Resources/02-Homework_04-Pandas_Instructions_HeroesOfPymoli_Resources_purchase_data.csv\"\n",
     "\n",
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "metadata": {
     "scrolled": true
    },
@@ -160,7 +161,7 @@
        "576"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +216,7 @@
        "0                      576"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +312,7 @@
        "0                     179       3.050987                  780        2379.77"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,81 +420,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Total Count</th>\n",
-       "      <th>Percentage of Players</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Male</th>\n",
-       "      <td>Purchase ID    113\n",
-       "SN             113\n",
-       "Age     ...</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Female</th>\n",
-       "      <td>Purchase ID    652\n",
-       "SN             652\n",
-       "Age     ...</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Other / Non-Disclosed</th>\n",
-       "      <td>Purchase ID    15\n",
-       "SN             15\n",
-       "Age       ...</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                             Total Count  \\\n",
-       "Male                   Purchase ID    113\n",
-       "SN             113\n",
-       "Age     ...   \n",
-       "Female                 Purchase ID    652\n",
-       "SN             652\n",
-       "Age     ...   \n",
-       "Other / Non-Disclosed  Purchase ID    15\n",
-       "SN             15\n",
-       "Age       ...   \n",
-       "\n",
-       "                      Percentage of Players  \n",
-       "Male                                   None  \n",
-       "Female                                 None  \n",
-       "Other / Non-Disclosed                  None  "
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'male_players' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-61-59e0c3f352ed>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#male_players = HeroesOfPymoli_data.loc[HeroesOfPymoli_data[\"Gender\"] == \"Male\"].count()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mfemale_percentage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfemale_players\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mplayers_count\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mmale_percentage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmale_players\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mplayers_count\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mother_players\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mHeroesOfPymoli_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mHeroesOfPymoli_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Gender\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"Other / Non-Disclosed\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mother_percentage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mother_players\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mplayers_count\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'male_players' is not defined"
+     ]
     }
    ],
    "source": [
@@ -514,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +508,7 @@
        "Other / Non-Disclosed           11               0.019097"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,30 +622,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#player_gender= HeroesOfPymoli_data[\"Gender\"].unique()\n",
+    "#player_gender\n",
+    "#purchase_count = HeroesOfPymoli_data[\"Gender\"].value_counts()\n",
+    "#purchase_count\n",
+    "#average_purchase = HeroesOfPymoli_data.loc[\"Female\", \"Price\"]\n",
+    "#average_purchase\n",
+    "#select gender, \n",
+    "#average_purchase = HeroesOfPymoli_data[\"Price\"].mean()\n",
+    "#average_purchase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#gender_purchase = HeroesOfPymoli_data.loc[:, [\"SN\", \"Gender\", \"Price\"]]\n",
+    "#user_purchase = gender_purchase.groupby([\"SN\"]).sum()[\"Price\"]\n",
+    "#user_purchasedf = user_purchase.pd.DataFrame()\n",
+    "#player_gender = gender_purchase[\"Gender\"].unique()\n",
+    "#grouped_gender = user_purchase.groupby([\"Gender\"])\n",
+    "#purchase_count = grouped_gender[\"Gender\"].value_counts()\n",
+    "#average_price = grouped_gender.mean()\n",
+    "#total_purchase = grouped_gender.sum()\n",
+    "#purchasing_analysis = pd.DataFrame({\"Purchase Count\": purchase_count, \"Average Purchase Price\": average_price, \n",
+    "#                                    \"Total Purchase Value\": total_purchase})\n",
+    "#purchasing_analysis\n",
+    "#per_person = gender_purchase.groupby([\"SN\"]).sum()[\"Price\"]\n",
+    "#each_gender =  grouped_gender.median()\n",
+    "#each_gender\n",
+    "#sn_valuecount = HeroesOfPymoli_data[\"SN\"].\n",
+    "#sn_valuecount\n",
+    "#average_purchase = total_revenue.mean(gender_count)\n",
+    "#average_purchase\n",
+    "#grouped_gender = HeroesOfPymoli_data.groupby([\"Gender\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Female</th>\n",
+       "      <td>113</td>\n",
+       "      <td>3.203009</td>\n",
+       "      <td>361.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>652</td>\n",
+       "      <td>3.017853</td>\n",
+       "      <td>1967.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other / Non-Disclosed</th>\n",
+       "      <td>15</td>\n",
+       "      <td>3.346000</td>\n",
+       "      <td>50.19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Price    3.050987\n",
-       "dtype: float64"
+       "                       Purchase Count  Average Purchase Price  \\\n",
+       "Gender                                                          \n",
+       "Female                            113                3.203009   \n",
+       "Male                              652                3.017853   \n",
+       "Other / Non-Disclosed              15                3.346000   \n",
+       "\n",
+       "                       Total Purchase Value  \n",
+       "Gender                                       \n",
+       "Female                               361.94  \n",
+       "Male                                1967.64  \n",
+       "Other / Non-Disclosed                 50.19  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#gender_purchase = HeroesOfPymoli_data[\"Gender\"].value_counts()\n",
-    "#purchase_count\n",
-    "#average_purchase = HeroesOfPymoli_data.loc[:, [\"Gender\", \"Price\"]]\n",
-    "#average_purchase\n",
-    "#select gender, \n",
-    "average_purchase = HeroesOfPymoli_data[[\"Gender\", \"Price\"]].mean()\n",
-    "average_purchase"
+    "gender_purchase = HeroesOfPymoli_data.loc[:, [\"SN\", \"Gender\", \"Price\"]]\n",
+    "grouped_gender = gender_purchase.groupby([\"Gender\"])\n",
+    "purchase_count = grouped_gender.count()[\"Price\"]\n",
+    "average_price = grouped_gender.mean()[\"Price\"]\n",
+    "average_price\n",
+    "total_purchase = grouped_gender.sum()[\"Price\"]\n",
+    "# total_person = gender_purchase.groupby([\"SN\"]).sum()[\"Price\"]\n",
+    "# total_person\n",
+    "purchasing_analysis = pd.DataFrame({\"Purchase Count\": purchase_count, \"Average Purchase Price\": average_price, \n",
+    "                                   \"Total Purchase Value\": total_purchase})\n",
+    "purchasing_analysis"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -822,6 +878,13 @@
     "\n",
     "* Display Age Demographics Table\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
