Made changes to code

--- a/HeroesOfPymoli/02-Homework_04-Pandas_Instructions_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/02-Homework_04-Pandas_Instructions_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
@@ -252,12 +252,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
     "unique_items = HeroesOfPymoli_data[\"Item ID\"].nunique()\n",
-    "average_price = HeroesOfPymoli_data[\"Price\"].mean()\n",
+    "average_price = round(HeroesOfPymoli_data[\"Price\"].mean(), 2)\n",
     "number_purchase = HeroesOfPymoli_data[\"Purchase ID\"].count()\n",
     "total_revenue = HeroesOfPymoli_data[\"Price\"].sum()\n",
     "#index = [0]"
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>179</td>\n",
-       "      <td>3.050987</td>\n",
+       "      <td>3.05</td>\n",
        "      <td>780</td>\n",
        "      <td>2379.77</td>\n",
        "    </tr>\n",
@@ -309,10 +309,10 @@
       ],
       "text/plain": [
        "   Number of Unique Items  Average Price  Number of Purchases  Total Revenue\n",
-       "0                     179       3.050987                  780        2379.77"
+       "0                     179           3.05                  780        2379.77"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,35 +420,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'male_players' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-61-59e0c3f352ed>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#male_players = HeroesOfPymoli_data.loc[HeroesOfPymoli_data[\"Gender\"] == \"Male\"].count()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mfemale_percentage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfemale_players\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mplayers_count\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mmale_percentage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmale_players\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mplayers_count\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mother_players\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mHeroesOfPymoli_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mHeroesOfPymoli_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Gender\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"Other / Non-Disclosed\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mother_percentage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mother_players\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mplayers_count\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'male_players' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "players_count = HeroesOfPymoli_data[\"Gender\"].count()\n",
-    "#players_gender = HeroesOfPymoli_data[\"Gender\"].value_counts()\n",
-    "female_players = HeroesOfPymoli_data.loc[HeroesOfPymoli_data[\"Gender\"] == \"Female\"].count()\n",
-    "#male_players = HeroesOfPymoli_data.loc[HeroesOfPymoli_data[\"Gender\"] == \"Male\"].count()\n",
-    "female_percentage = female_players / players_count\n",
-    "male_percentage = male_players / players_count\n",
-    "other_players = HeroesOfPymoli_data.loc[HeroesOfPymoli_data[\"Gender\"] == \"Other / Non-Disclosed\"].count()\n",
-    "other_percentage = other_players / players_count\n",
-    "index = [\"Male\", \"Female\", \"Other / Non-Disclosed\"]\n",
-    "gender_demographics = pd.DataFrame({\"Total Count\": None, \"Percentage of Players\": None}, index=index)\n",
-    "gender_demographics[\"Total Count\"] = [female_players, male_players, other_players]\n",
-    "#gender_demographics[\"Percentage of Players\"] = \n",
-    "gender_demographics"
+    "# players_count = HeroesOfPymoli_data[\"Gender\"].count()\n",
+    "# #players_gender = HeroesOfPymoli_data[\"Gender\"].value_counts()\n",
+    "# female_players = HeroesOfPymoli_data.loc[HeroesOfPymoli_data[\"Gender\"] == \"Female\"].count()\n",
+    "# #male_players = HeroesOfPymoli_data.loc[HeroesOfPymoli_data[\"Gender\"] == \"Male\"].count()\n",
+    "# female_percentage = female_players / players_count\n",
+    "# male_percentage = male_players / players_count\n",
+    "# other_players = HeroesOfPymoli_data.loc[HeroesOfPymoli_data[\"Gender\"] == \"Other / Non-Disclosed\"].count()\n",
+    "# other_percentage = other_players / players_count\n",
+    "# index = [\"Male\", \"Female\", \"Other / Non-Disclosed\"]\n",
+    "# gender_demographics = pd.DataFrame({\"Total Count\": None, \"Percentage of Players\": None}, index=index)\n",
+    "# gender_demographics[\"Total Count\"] = [female_players, male_players, other_players]\n",
+    "# #gender_demographics[\"Percentage of Players\"] = \n",
+    "# gender_demographics"
    ]
   },
   {
@@ -666,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -705,19 +693,19 @@
        "    <tr>\n",
        "      <th>Female</th>\n",
        "      <td>113</td>\n",
-       "      <td>3.203009</td>\n",
+       "      <td>3.20</td>\n",
        "      <td>361.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Male</th>\n",
        "      <td>652</td>\n",
-       "      <td>3.017853</td>\n",
+       "      <td>3.02</td>\n",
        "      <td>1967.64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
        "      <td>15</td>\n",
-       "      <td>3.346000</td>\n",
+       "      <td>3.35</td>\n",
        "      <td>50.19</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -727,9 +715,9 @@
       "text/plain": [
        "                       Purchase Count  Average Purchase Price  \\\n",
        "Gender                                                          \n",
-       "Female                            113                3.203009   \n",
-       "Male                              652                3.017853   \n",
-       "Other / Non-Disclosed              15                3.346000   \n",
+       "Female                            113                    3.20   \n",
+       "Male                              652                    3.02   \n",
+       "Other / Non-Disclosed              15                    3.35   \n",
        "\n",
        "                       Total Purchase Value  \n",
        "Gender                                       \n",
@@ -738,7 +726,7 @@
        "Other / Non-Disclosed                 50.19  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,10 +735,9 @@
     "gender_purchase = HeroesOfPymoli_data.loc[:, [\"SN\", \"Gender\", \"Price\"]]\n",
     "grouped_gender = gender_purchase.groupby([\"Gender\"])\n",
     "purchase_count = grouped_gender.count()[\"Price\"]\n",
-    "average_price = grouped_gender.mean()[\"Price\"]\n",
-    "average_price\n",
-    "total_purchase = grouped_gender.sum()[\"Price\"]\n",
-    "# total_person = gender_purchase.groupby([\"SN\"]).sum()[\"Price\"]\n",
+    "average_price = round(grouped_gender.mean()[\"Price\"], 2)\n",
+    "total_purchase = round(grouped_gender.sum()[\"Price\"], 2)\n",
+    "# total_person = gender_purchase.agg(lambda x : x.groupby(\"SN\"))\n",
     "# total_person\n",
     "purchasing_analysis = pd.DataFrame({\"Purchase Count\": purchase_count, \"Average Purchase Price\": average_price, \n",
     "                                   \"Total Purchase Value\": total_purchase})\n",
@@ -881,10 +868,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Count</th>\n",
+       "      <th>Percentage of Players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>17</td>\n",
+       "      <td>0.029514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-14</th>\n",
+       "      <td>22</td>\n",
+       "      <td>0.038194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15-19</th>\n",
+       "      <td>107</td>\n",
+       "      <td>0.185764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20-24</th>\n",
+       "      <td>258</td>\n",
+       "      <td>0.447917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25-29</th>\n",
+       "      <td>77</td>\n",
+       "      <td>0.133681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30-34</th>\n",
+       "      <td>52</td>\n",
+       "      <td>0.090278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35-39</th>\n",
+       "      <td>31</td>\n",
+       "      <td>0.053819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40+</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.008681</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Total Count  Percentage of Players\n",
+       "<10             17               0.029514\n",
+       "10-14           22               0.038194\n",
+       "15-19          107               0.185764\n",
+       "20-24          258               0.447917\n",
+       "25-29           77               0.133681\n",
+       "30-34           52               0.090278\n",
+       "35-39           31               0.053819\n",
+       "40+              5               0.008681"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Create the bins\n",
+    "bins = [0, 9, 14, 19, 24, 29, 34, 39, 40]\n",
+    "#Create the names for the bins\n",
+    "group_names = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
+    "#Categorize players through age bins \n",
+    "HeroesOfPymoli_data[\"Age Groups\"] = pd.cut(HeroesOfPymoli_data[\"Age\"], bins, labels=group_names, include_lowest=True)\n",
+    "drop_reccuring = HeroesOfPymoli_data.drop_duplicates(\"SN\")\n",
+    "age_groups = drop_reccuring.groupby(\"Age Groups\")\n",
+    "group_total = age_groups.count()[\"Age\"]\n",
+    "group_percentage = group_total / unique_players\n",
+    "age_demographics = pd.DataFrame({\"Total Count\": group_total, \"Percentage of Players\": group_percentage}, index=group_names)\n",
+    "age_demographics"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# group_percentage\n",
+    "#group_total\n",
+    "# age_demographics = pd.DataFrame(age_groups)\n",
+    "# age_demographics\n",
+    "# grouped_ages = age_demographics.groupby(\"Age\")\n",
+    "# grouped_ages\n",
+    "# group_total = grouped_ages.value_counts(\"Age\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -1005,6 +1107,20 @@
     "\n",
     "* Display the summary data frame"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
