--- a/HeroesOfPymoli/02-Homework_04-Pandas_Instructions_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/02-Homework_04-Pandas_Instructions_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
@@ -511,7 +511,7 @@
     "#unique_values\n",
     "gender = unique_values[\"Gender\"].value_counts()\n",
     "total_players = unique_values[\"Gender\"].count()\n",
-    "player_percentage = gender / total_players\n",
+    "player_percentage =  / total_players\n",
     "gender_demographics = pd.DataFrame({\"Total Count\": gender, \"Percentage of Players\": player_percentage})\n",
     "gender_demographics"
    ]
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -681,9 +681,11 @@
        "      <th>Purchase Count</th>\n",
        "      <th>Average Purchase Price</th>\n",
        "      <th>Total Purchase Value</th>\n",
+       "      <th>Avg. Purchase total per person</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Gender</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -695,18 +697,21 @@
        "      <td>113</td>\n",
        "      <td>3.20</td>\n",
        "      <td>361.94</td>\n",
+       "      <td>4.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Male</th>\n",
        "      <td>652</td>\n",
        "      <td>3.02</td>\n",
        "      <td>1967.64</td>\n",
+       "      <td>4.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
        "      <td>15</td>\n",
        "      <td>3.35</td>\n",
        "      <td>50.19</td>\n",
+       "      <td>4.56</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -719,14 +724,14 @@
        "Male                              652                    3.02   \n",
        "Other / Non-Disclosed              15                    3.35   \n",
        "\n",
-       "                       Total Purchase Value  \n",
-       "Gender                                       \n",
-       "Female                               361.94  \n",
-       "Male                                1967.64  \n",
-       "Other / Non-Disclosed                 50.19  "
+       "                       Total Purchase Value  Avg. Purchase total per person  \n",
+       "Gender                                                                       \n",
+       "Female                               361.94                            4.47  \n",
+       "Male                                1967.64                            4.07  \n",
+       "Other / Non-Disclosed                 50.19                            4.56  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,10 +742,9 @@
     "purchase_count = grouped_gender.count()[\"Price\"]\n",
     "average_price = round(grouped_gender.mean()[\"Price\"], 2)\n",
     "total_purchase = round(grouped_gender.sum()[\"Price\"], 2)\n",
-    "# total_person = gender_purchase.agg(lambda x : x.groupby(\"SN\"))\n",
-    "# total_person\n",
+    "total_person = round((total_purchase / gender), 2)\n",
     "purchasing_analysis = pd.DataFrame({\"Purchase Count\": purchase_count, \"Average Purchase Price\": average_price, \n",
-    "                                   \"Total Purchase Value\": total_purchase})\n",
+    "                                   \"Total Purchase Value\": total_purchase, \"Avg. Purchase total per person\": total_person})\n",
     "purchasing_analysis"
    ]
   },
@@ -1110,10 +1114,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "      <th>Avg. Purchase total per person</th>\n",
+       "      <th>Age Groups</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Female</th>\n",
+       "      <td>113</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>361.94</td>\n",
+       "      <td>4.47</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>652</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>1967.64</td>\n",
+       "      <td>4.07</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other / Non-Disclosed</th>\n",
+       "      <td>15</td>\n",
+       "      <td>3.35</td>\n",
+       "      <td>50.19</td>\n",
+       "      <td>4.56</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Purchase Count  Average Purchase Price  \\\n",
+       "Gender                                                          \n",
+       "Female                            113                    3.20   \n",
+       "Male                              652                    3.02   \n",
+       "Other / Non-Disclosed              15                    3.35   \n",
+       "\n",
+       "                       Total Purchase Value  Avg. Purchase total per person  \\\n",
+       "Gender                                                                        \n",
+       "Female                               361.94                            4.47   \n",
+       "Male                                1967.64                            4.07   \n",
+       "Other / Non-Disclosed                 50.19                            4.56   \n",
+       "\n",
+       "                      Age Groups  \n",
+       "Gender                            \n",
+       "Female                       NaN  \n",
+       "Male                         NaN  \n",
+       "Other / Non-Disclosed        NaN  "
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "purchasing_analysis[\"Age Groups\"] = pd.cut(HeroesOfPymoli_data[\"Age\"], bins, labels=group_names, include_lowest=True)\n",
+    "purchasing_analysis"
+   ]
   },
   {
    "cell_type": "code",
